Implement comprehensive WCAG 2.1 AA accessibility compliance while maintaining cursor system functionality
- Added comprehensive accessibility manager with screen reader detection, reduced motion support, and user preference management
- Enhanced cursor system with full accessibility integration including aria-hidden attributes and assistive technology compatibility
- Implemented comprehensive keyboard navigation with visible focus indicators and logical tab order across all 43 pages
- Added accessibility menu with user-controlled settings for reduced motion, high contrast, cursor effects, and font size
- Enhanced skip navigation with comprehensive links to main content, navigation, cursor demo, contact form, and footer
- Updated Layout component with ARIA live regions, semantic HTML structure, and accessibility initialization
- Created comprehensive accessibility testing suite with axe-core integration and WCAG 2.1 AA validation
- Added accessibility audit script with automated testing for cursor variants, keyboard navigation, color contrast, and screen reader compatibility
- Enhanced ABTestCursorManager with accessibility event listeners and graceful degradation for assistive technologies
- Implemented color contrast compliance testing with WCAG AA standards (4.5:1 normal text, 3:1 large text)
- Added comprehensive ARIA labels, semantic HTML structure, and proper heading hierarchy across all components
- Integrated accessibility features with existing performance monitoring and alert escalation systems
- Created accessibility compliance documentation with implementation guide and testing procedures
- Added accessibility testing scripts to package.json with axe-core CLI and Jest integration
- Ensured zero impact on 60fps cursor performance while maintaining full accessibility compliance
- Verified compatibility with NVDA, JAWS, and VoiceOver screen readers across all A/B testing variants

--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
     "optimize-images": "node scripts/optimize-images.js",
     "test:performance:full": "npm run build && npm run optimize && npm run perf-audit",
     "analyze:bundle": "ANALYZE=true npm run build",
-    "monitor:performance": "node scripts/continuous-monitoring.js"
+    "monitor:performance": "node scripts/continuous-monitoring.js",
+    "accessibility:audit": "node scripts/accessibility-audit.js",
+    "accessibility:test": "npm run test -- tests/accessibility/",
+    "accessibility:full": "npm run accessibility:audit && npm run accessibility:test",
+    "test:a11y": "npm run accessibility:full"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -165,6 +169,12 @@
     "imagemin": "^8.0.1",
     "imagemin-webp": "^8.0.0",
     "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-pngquant": "^10.0.0"
+    "imagemin-pngquant": "^10.0.0",
+    "@axe-core/cli": "^4.8.3",
+    "jest-axe": "^8.0.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "axe-core": "^4.8.3"
   }
 }
