--- a/package.json
+++ b/package.json
@@ -78,9 +78,11 @@
     "@mui/material": "^7.0.2",
     "@notionhq/client": "^2.3.0",
     "@stripe/stripe-js": "^7.2.0",
+    "@testing-library/dom": "^10.4.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -88,6 +90,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "critters": "^0.0.23",
+    "cssnano": "^7.0.6",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
@@ -108,6 +111,11 @@
     "node-cron": "^3.0.2",
     "nodemailer": "^6.10.1",
     "particles.js": "^2.0.0",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
@@ -124,21 +132,18 @@
     "twilio": "^4.11.0",
     "typescript": "^5.3.3",
     "yup": "^1.3.2",
-    "zustand": "^4.4.7",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.6",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "autoprefixer": "^10.4.21",
-    "cssnano": "^7.0.6",
-    "postcss-cli": "^11.0.1"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@axe-core/cli": "^4.10.1",
     "@cloudflare/workers-types": "^4.20250430.0",
+    "@sentry/nextjs": "^7.99.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/user-event": "^14.6.1",
+    "axe-core": "^4.10.3",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-imports": "^2.0.0",
     "cypress": "^13.17.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.4",
@@ -146,10 +151,15 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-webp": "^8.0.0",
     "jest": "^29.7.0",
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
+    "lighthouse": "^11.4.0",
     "lint-staged": "^15.2.0",
     "msw": "^2.0.11",
     "nodemon": "^3.0.2",
@@ -161,20 +171,7 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
     "supertest": "^7.1.0",
-    "webpack-bundle-analyzer": "^4.10.1",
-    "lighthouse": "^11.4.0",
-    "@sentry/nextjs": "^7.99.0",
     "web-vitals": "^3.5.2",
-    "babel-plugin-transform-imports": "^2.0.0",
-    "imagemin": "^8.0.1",
-    "imagemin-webp": "^8.0.0",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-pngquant": "^10.0.0",
-    "@axe-core/cli": "^4.8.3",
-    "jest-axe": "^8.0.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "axe-core": "^4.8.3"
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
