--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "axe-core": "^4.10.3",
     "babel-jest": "^29.7.0",
     "babel-plugin-transform-imports": "^2.0.0",
+    "chrome-launcher": "^1.2.0",
     "cypress": "^13.17.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.4",
@@ -166,12 +167,12 @@
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
-    "lighthouse": "^11.4.0",
+    "lighthouse": "^12.6.1",
     "lint-staged": "^15.2.0",
     "msw": "^2.0.11",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
-    "puppeteer": "^21.6.1",
+    "puppeteer": "^24.10.0",
     "styled-components": "^6.1.8",
     "stylelint": "^16.2.1",
     "stylelint-config-recommended": "^14.0.0",
