--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "setup:production": "NODE_ENV=production node Scripts/setup-env.js",
     "validate-env": "node -e \"require('./utils/env-validation').validateAndExit()\"",
     "precommit": "lint-staged",
-    "prepare": "echo 'Skipping husky install in production'",
+    "prepare": "husky install",
     "test:cursor": "jest tests/cursor.test.js",
     "test:cursor:watch": "jest tests/cursor.test.js --watch",
     "test:layout": "jest tests/layout.test.js",
@@ -98,6 +98,7 @@
     "cors": "^2.8.5",
     "critters": "^0.0.23",
     "cssnano": "^7.0.6",
+    "csurf": "^1.11.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
@@ -138,6 +139,7 @@
     "telegraf": "^4.16.3",
     "twilio": "^4.11.0",
     "typescript": "^5.3.3",
+    "xss-clean": "^0.1.4",
     "yup": "^1.3.2",
     "zustand": "^4.4.7"
   },
