--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@notionhq/client": "^2.3.0",
+    "@sentry/tracing": "^7.120.3",
     "@stripe/stripe-js": "^7.2.0",
     "@testing-library/dom": "^10.4.0",
     "@types/node": "^20.10.0",
