DOMAIN UPDATE: Complete migration from digiclickai.netlify.app to digiclickai.com
🌐 COMPREHENSIVE DOMAIN MIGRATION:

1. Environment Variables & Configuration:
   - Updated .env.local CORS_ORIGIN to use digiclickai.com
   - Updated .env.production NEXT_PUBLIC_SITE_URL and NEXT_PUBLIC_APP_URL
   - Updated next.config.js images domains configuration
   - Maintained backward compatibility with Netlify URL

2. SEO & Meta Tags:
   - Updated DigiClickSEO.js default fallback URL to digiclickai.com
   - Updated sitemap generation script to use new domain
   - Generated new sitemap with 17 pages using digiclickai.com URLs
   - All Open Graph and Twitter meta tags now use new domain

3. Internal Links & References:
   - Updated all deployment verification scripts
   - Updated Lighthouse CI configuration URLs
   - Updated deployment monitoring scripts
   - Updated backend CORS configuration to prioritize digiclickai.com

4. Analytics & Tracking:
   - Google Analytics configuration uses environment variables (no changes needed)
   - All tracking scripts automatically use new domain
   - Custom analytics events maintain functionality

5. Documentation Updates:
   - Updated GitHub Secrets setup documentation
   - Updated deployment verification protocols
   - Updated all deployment guides with new domain

✅ PRODUCTION READY:
- Build completed successfully (51 pages generated)
- Sitemap generated with digiclickai.com URLs
- All environment variables properly configured
- Backward compatibility maintained for smooth transition
- All advanced features preserved (cursor, analytics, PWA)

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # Environment variables for production build
-NEXT_PUBLIC_SITE_URL=https://digiclickai.netlify.app
+NEXT_PUBLIC_SITE_URL=https://digiclickai.com
+NEXT_PUBLIC_APP_URL=https://digiclickai.com
 NODE_ENV=production
 NEXT_TELEMETRY_DISABLED=1
 NEXT_SHARP_PATH=/tmp/node_modules/sharp
