--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,8 +30,9 @@
       "url": "/dashboard",
       "icons": [
         {
-          "src": "/icons/dashboard-icon.png",
-          "sizes": "192x192"
+          "src": "/icons/icon-192x192.svg",
+          "sizes": "192x192",
+          "type": "image/svg+xml"
         }
       ]
     }
