Fix deployment configuration issues
- Add missing NEXT_PUBLIC_API_URL to .env.production
- Update netlify.toml to use proper Next.js plugin and build directory
- Ensure proper environment variables for production deployment
- Fix Netlify configuration to work with Next.js dynamic features

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
 # Environment variables for production build
 NEXT_PUBLIC_SITE_URL=https://digiclickai.com
 NEXT_PUBLIC_APP_URL=https://digiclickai.com
+NEXT_PUBLIC_API_URL=https://digiclickai.com/api
 NODE_ENV=production
 NEXT_TELEMETRY_DISABLED=1
 NEXT_SHARP_PATH=/tmp/node_modules/sharp
