--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 [build]
   command = "npm run build"
-  publish = "out"
+  publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 # Cache control for static assets
 [[headers]]
