--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
+  "outputDirectory": "out",
   "env": {
     "NODE_ENV": "production",
     "NEXT_PUBLIC_SITE_URL": "https://digiclickai.com",
-    "NEXT_PUBLIC_APP_URL": "https://digiclickai.com",
-    "NEXT_PUBLIC_API_URL": "https://digiclickai.com/api"
+    "NEXT_PUBLIC_APP_URL": "https://digiclickai.com"
   },
   "redirects": [
     {
