Remove Vercel dependencies and simplify deployment to Netlify-only
- Remove vercel.json and vercel 2.json configuration files
- Update package.json to remove Vercel deployment scripts
- Update Scripts/deploy.js to remove Vercel deployment function
- Fix Netlify deployment to use correct 'out' directory
- Remove conflicting pages/ directory to resolve build issues
- Maintain Tailwind CSS configuration and Next.js static export settings
- GitHub Actions workflow already configured for Netlify-only deployment

--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "deploy:monitor": "node Scripts/deployment-monitor.js",
     "deploy:health": "curl -f $NEXT_PUBLIC_APP_URL/api/health-check",
     "performance:check": "npm run deploy:verify",
-    "deploy:vercel": "node Scripts/deploy.js vercel",
+    "deploy": "node Scripts/deploy.js netlify",
     "deploy:netlify": "node Scripts/deploy.js netlify",
-    "deploy:skip-tests": "node Scripts/deploy.js vercel --skip-tests",
     "build:analyze": "ANALYZE=true npm run build",
     "sitemap:generate": "node Scripts/generate-sitemap.js",
     "performance:test": "echo 'Performance testing temporarily disabled for deployment'",
