Clean up Netlify references and migrate to GitHub Pages
- Remove Netlify configuration files (netlify.toml, netlify.yaml, netlify.json, netlify.sh, netlify-build.sh)
- Update deployment scripts to use GitHub Pages instead of Netlify
- Modify Scripts/deploy.js to support GitHub Pages deployment via git push
- Update package.json scripts to use new GitHub Pages deployment workflow
- Remove disabled GitHub Actions workflow with Netlify references
- Clean up .gitignore to remove Netlify-specific entries
- Simplify deployment architecture to GitHub-only workflow

--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
     "generate-sitemap": "node Scripts/generate-sitemap.js",
     "api": "node api-server.js",
     "api:dev": "nodemon api-server.js",
-    "deploy": "./Scripts/deploy.sh",
-    "deploy:staging": "./Scripts/deploy.sh staging",
-    "deploy:production": "./Scripts/deploy.sh production",
-    "deploy:frontend": "./Scripts/deploy.sh production frontend",
-    "deploy:backend": "./Scripts/deploy.sh production backend",
-    "deploy:hotfix": "./Scripts/deploy.sh production all --skip-tests",
+    "deploy": "node Scripts/deploy.js github-pages",
+    "deploy:production": "npm run build && npm run deploy",
+    "deploy:verify": "curl -f https://digiclickai.com || echo 'Site verification failed'",
     "docker:build": "docker build -t digiclick-ai .",
     "docker:run": "docker run -p 3000:3000 digiclick-ai",
     "docker:dev": "docker-compose up --build",
@@ -45,12 +42,8 @@
     "test:cross-device": "node tests/cross-device/device-tests.js",
     "test:all": "npm run test && npm run test:performance && npm run test:e2e && npm run test:accessibility",
     "check:cursor": "node Scripts/check-cursor.js",
-    "deploy:verify": "node Scripts/verify-deployment.js",
-    "deploy:monitor": "node Scripts/deployment-monitor.js",
-    "deploy:health": "curl -f $NEXT_PUBLIC_APP_URL/api/health-check",
+    "deploy:health": "curl -f https://digiclickai.com",
     "performance:check": "npm run deploy:verify",
-    "deploy": "node Scripts/deploy.js netlify",
-    "deploy:netlify": "node Scripts/deploy.js netlify",
     "build:analyze": "ANALYZE=true npm run build",
     "sitemap:generate": "node Scripts/generate-sitemap.js",
     "performance:test": "echo 'Performance testing temporarily disabled for deployment'",
